syntax = "proto3";
package cko.card_processing_settlement_{{ cookiecutter.scheme_slug }};

import "cko.proto";

message Charge {
  string record_type = 1 [(cko.doc) = "Constant value 06."];
  string sequence_number = 2 [(cko.doc) = "The sequence of the charge within the batch. Right-justified and padded with leading zeros."];
  string card_number = 3 [
    (cko.doc) = "Card number left justified and padded with trailing spaces.",
    (cko.pci) = true,
    (cko.pii) = true
  ];
}
